# libECS

./: Bitmask.cpp  CMakeLists.txt  Entity.h  LICENSE  README.md
include/ECS/: Bitmask.h  Component.h  Entity.h  EntityManager.h  System.h
src/ECS/: EntityManager.cpp
